fixes some spacing and makes the triangle partially responsive

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -140,6 +140,7 @@ img#app-store {
   left: 175pt;
   position: relative;
   width: 250pt;
+  padding-top: 30pt;
 }
 
 .lower h1 {
@@ -171,31 +172,32 @@ img#low-phone {
   right: 10pt;
 }
 
-img#recomendations {
+img#recommendations {
   height: auto;
   width: 355pt;
   top: 1160pt;
-  right: 170pt;
+  right: 185pt;
   position: absolute;
+  padding-top: 50pt;
 }
 
 img#review {
   margin-top: 50pt;
-  margin-left: 140pt;
+  margin-left: 190pt;
   width: 201pt;
   height: 237pt;
 }
 
 #rate-and-review {
   margin-right: 140pt;
-  width: 360pt;
+  width: 255pt;
   position: absolute;
-  top: 1458pt;
-  right: 10pt;
+  top: 1518pt;
+  right: 110pt;
 }
 
 #footer {
-  height: 500px;
+  height: 550px;
   top: 150pt;
   position: relative;
   background-color: rgb(244, 248, 247);
@@ -214,35 +216,35 @@ img#review {
 }
 
 #footer-arrow:after {
-    display: block;
-    width: 0;
-    height: 0;
-    margin-left:-500px;
-    border-left: 700px solid transparent;
-    border-right: 700px solid transparent;
-    border-bottom: 100pt solid rgb(244, 248, 247);
+  display: block;
+  width: 0;
+  height: 0;
+  margin-left: -500px;
+  border-left: 700px solid transparent;
+  border-right: 700px solid transparent;
+  border-bottom: 100pt solid rgb(244, 248, 247);
 }
 
 .triangle-up {
-    width: 1;
-    height: 0;
-    padding-left: 35%;
-    padding-right: 10%;
-    padding-bottom: 10%;
-    overflow: hidden;
-    position: relative;
-    top: 177pt;
+  width: 1;
+  height: 0;
+  padding-left: 33%;
+  padding-right: 10%;
+  padding-bottom: 10%;
+  overflow: hidden;
+  position: relative;
+  top: 177pt;
 }
 
 .triangle-up:after {
-    content: "";
-    display: block;
-    width: 0;
-    height: 0;
-    margin-left: -400pt;
-    border-left: 750px solid transparent;
-    border-right: 750px solid transparent;
-    border-bottom: 80pt solid rgb(244, 248, 247);
+  content: "";
+  display: block;
+  width: 0;
+  height: 0;
+  margin-left: -400pt;
+  border-left: 750px solid transparent;
+  border-right: 750px solid transparent;
+  border-bottom: 80pt solid rgb(244, 248, 247);
 }
 }
 
@@ -252,6 +254,7 @@ img#review {
   margin-right: auto;
   width: 200pt;
   height: 200pt;
+  top: 200pt;
 }
 
 img#book-footer {
@@ -273,6 +276,14 @@ img#book-footer {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.large-top-padding {
+  padding-top: 50pt;
+}
+
+.small-top-padding {
+  padding-top: 20pt;
 }
 
 #horizontal-line {
